--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-streamlit
+streamlit==1.35.0
+transformers==4.41.1
+torch==2.3.0
+pandas==2.2.2
+gspread==6.1.0
+oauth2client==4.1.3
+requests==2.32.3
 requests
